// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/manager/gitlabci-include/extract extractPackageFile() extracts component references 1`] = `
[
  {
    "currentValue": "1.0",
    "datasource": "gitlab-tags",
    "depName": "an-org/a-project",
    "depType": "repository",
    "registryUrls": [
      "gitlab.example.com",
    ],
  },
  {
    "currentValue": "e3262fdd0914fa823210cdb79a8c421e2cef79d8",
    "datasource": "gitlab-tags",
    "depName": "an-org/a-subgroup/a-project",
    "depType": "repository",
    "registryUrls": [
      "gitlab.example.com",
    ],
  },
  {
    "currentValue": "main",
    "datasource": "gitlab-tags",
    "depName": "an-org/a-subgroup/another-project",
    "depType": "repository",
    "registryUrls": [
      "gitlab.example.com",
    ],
  },
  {
    "currentValue": "~latest",
    "datasource": "gitlab-tags",
    "depName": "another-org/a-project",
    "depType": "repository",
    "registryUrls": [
      "gitlab.example.com",
    ],
    "skipReason": "unsupported-version",
  },
]
`;

exports[`modules/manager/gitlabci-include/extract extractPackageFile() extracts multiple include blocks 1`] = `
[
  {
    "currentValue": "1.0.0",
    "datasource": "gitlab-tags",
    "depName": "mikebryant/include-source-example",
    "depType": "repository",
  },
  {
    "currentValue": "master",
    "datasource": "gitlab-tags",
    "depName": "mikebryant/include-source-example2",
    "depType": "repository",
  },
  {
    "datasource": "gitlab-tags",
    "depName": "mikebryant/include-source-example3",
    "depType": "repository",
    "skipReason": "unspecified-version",
  },
]
`;

exports[`modules/manager/gitlabci-include/extract extractPackageFile() extracts single include block 1`] = `
[
  {
    "currentValue": "1.0.0",
    "datasource": "gitlab-tags",
    "depName": "mikebryant/include-source-example",
    "depType": "repository",
  },
]
`;
